Fixed wrong FAQ link

--- a/_includes/details-and-contacts.html
+++ b/_includes/details-and-contacts.html
@@ -41,7 +41,7 @@
 						• With most IP webcams, you can <b>receive the video stream via RTSP, HTTP or RTMP</b>, without opening a browser; GlanceCam shows you those feeds in a <b>resizable window you can keep always visible on your Desktop</b>.<br><br>
 						• You can add <b>as many cameras as you like</b>.<br><br>
 						• The app shows one camera at a time in a single window, and you can switch between cameras inside that window; upgrading to GlanceCam Pro will allow to open as many windows as you need.<br><br>
-						• For every camera, you can also configure up to 2 optional buttons, visible when you hover your mouse on the app window, to <a href="{{ site.baseurl }}/faqs#automation">perform actions via customizable HTTP GET request URLs.</a><br><br>
+						• For every camera, you can also configure up to 2 optional buttons, visible when you hover your mouse on the app window, to <a href="{{ site.baseurl }}/faqs#actions">perform actions via customizable HTTP GET request URLs.</a><br><br>
 						• GlanceCam's window can be configured to be <b>'Always on top' and visible in every Space</b>, or even 'Behind everything', at the level of your Desktop; the app can <b>optionally auto-launch at login</b>.<br><br>
 						• GlanceCam offers many <b><a href="{{ site.baseurl }}/faqs#shortcuts">keyboard shortcuts</a></b> and is great for automation: it has a <a href="{{ site.baseurl }}/faqs#automation">URL scheme and supports Apple Script</a> for switching cameras and toggling full-screen mode; you can even control it from your MacBook's TouchBar.<br><br><br><br>
 					</p>
