Improved PressKit link title

--- a/_includes/details-and-contacts.html
+++ b/_includes/details-and-contacts.html
@@ -56,7 +56,7 @@
  					<a href="https://cdf1982.com/glancecam/faqs">Frequently Asked Questions</a><br>
  					<a href="https://cdf1982.com/glancecam/glancecam-release-notes">Release Notes</a><br>
  					<a href="https://cdf1982.com/tag/glancecam">GlanceCam Blog on cdf1982.com</a><br><br>
- 					<a href="https://cdf1982.com/glancecam-mediakit">From the Press 😍? Here's the Media Kit</a><br><br><br><br>
+ 					<a href="https://cdf1982.com/glancecam-mediakit">Member of the Press 😍? Here's the Media Kit</a><br><br><br><br>
                     </p>
                 </div>
 				
