CTAs text improvements for mobile

--- a/_includes/call_to_action2.html
+++ b/_includes/call_to_action2.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-xl-12 text-center">
                 <div class="call-to-action white-text">
-                    <h3>Thank you for reading everything!<br><br>Now, let's TRY GLANCECAM</h3>
+                    <h3>Now that you know everything about it...<br><br>LET'S TRY GLANCECAM!</h3>
                     <div class="call-to-action">
                     </div>
                 </div>
