--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,4 +1,14 @@
-<section class="testimonial-area pt-100 pb-100">
+<a name="user-reviews"></a>
+<section class="testimonial-area pink-bg pt-100 pb-100">
+    <div class="row">
+        <div class="col-xl-12">
+            <div class="col-xl-12 text-center pb-40 ">
+                <div class="section-title service-title">
+                    <h2>Users ♥️ GlanceCam</h2>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-xl-12">
