Fixed direction of arrows in testimonials, now red

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1164,23 +1164,23 @@ label {
 .client-text::before {
 	position: absolute;
 	left: 125px;
-	content: ">";
+	content: "<";
 	font-family: "Font Awesome 5 free";
 	top: 0;
 	font-style: normal;
 	font-size: 27px;
-	color: #ff5e14;
+	color: #ff0000;
 }
 .client-text::after {
 	position: absolute;
 	left: auto;
 	right: 125px;
-	content: "<";
+	content: ">";
 	font-family: "Font Awesome 5 free";
 	bottom: 0;
 	font-style: normal;
 	font-size: 27px;
-	color: #ff5e14;
+	color: #ff0000;
 }
 .testimonial-items img {
 	border-radius: 50%;
