--- a/_includes/use-cases-and-features.html
+++ b/_includes/use-cases-and-features.html
@@ -11,7 +11,7 @@
 						• Mount webcams in your living room, kitchen and garden to check on your cat when you're away, maybe turning on a light at night or taking a snapshot when kitty does something funny.<br><br>
 						• Point a camera at your front gate and let visitors in by activating a network relay.<br><br>
 						<b>GlanceCam is a bit nerdy</b>, but very useful if you want to take full advantage of cheap webcams.<br>It can stream cameras on your LAN or via Internet and, while <b>it's not the most "works out-of-the-box" app to configure (<a href="{{ site.baseurl }}/faqs#setup">you'll need some knowledge about your network and cameras</a>: IP address, username, password and the string format required to stream your specific camera model)</b>, it's very flexible and brand-agnostic; please, check the requirements section, and don't hesitate to <a href="mailto:support@cdf1982.com">ask me a question</a> before purchasing.<br><br>
-						<b>Please be advised that GlanceCam is designed for realtime playback and DOES NOT support DVRs / NVRs, proprietary cloud services, recording (nor playback of recordings), motion detection and pan & tilt (PTZ) control</b>.<br><br><br><br>
+						<b>Please be advised that GlanceCam is designed for realtime playback and DOES NOT support DVRs / NVRs, proprietary cloud services, recording (nor playback of recordings), motion detection and pan & tilt (PTZ) control</b>.<br><br><br>
 					</p>
                 </div>
             </div>
