Forced URL cdf1982.com/… where necessary
FAQs and Release notes are currently still on my site

--- a/_includes/requirements-links-contacts.html
+++ b/_includes/requirements-links-contacts.html
@@ -9,11 +9,11 @@
                <div class="about-content">
                    <p>
 					• A Mac running Big Sur or a previous version of macOS (High Sierra or newer).<br><br>
-					• One or more IP cameras capable of broadcasting their stream via RTSP, HTTP(s) or RTMP; you'll need to know the camera IP address, your personal credentials (username and password) and the string format required by the manufacturer (including the string protocol and port). There's (<a href="{{ site.baseurl }}/faqs#setup">extensive documentation about the setup process</a>, and you can always <a href="{{ site.baseurl }}/faqs#support">count on my help</a> if you need assistance.<br><br>
+					• One or more IP cameras capable of broadcasting their stream via RTSP, HTTP(s) or RTMP; you'll need to know the camera IP address, your personal credentials (username and password) and the string format required by the manufacturer (including the string protocol and port). There's (<a href="https://cdf1982.com/glancecam/faqs#setup">extensive documentation about the setup process</a>, and you can always <a href="https://cdf1982.com/glancecam/faqs#support">count on my help</a> if you need assistance.<br><br>
 					• Any Mac running the supported operating systems should have plenty of power to stream IP cameras with GlanceCam, but multiple streams, high resolutions or lots of cameras open at the same time will require faster computers.<br><br>
 					• A solid connection between your computer and the cameras, be it LAN or WiFi, is recommended both for performances and stability, especially if you want many cameras to stream at the same time.<br><br>
-					• For triggering actions by pressing the <a href="{{ site.baseurl }}/faqs#actions">customizable buttons</a>, you'll need devices or appliances that can react to HTTP GET requests.<br><br>
-					• To stream over the Internet, you'll need a static public IP address or a dynamic DNS service and to configure port forwarding for each camera and, optionally, action button; I recommend to start testing the video stream in LAN to check the compatibility before digging into remote connections; learn more <a href="{{ site.baseurl }}/faqs#remote">here</a>.<br><br><br>
+					• For triggering actions by pressing the <a href="https://cdf1982.com/glancecam/faqs#actions">customizable buttons</a>, you'll need devices or appliances that can react to HTTP GET requests.<br><br>
+					• To stream over the Internet, you'll need a static public IP address or a dynamic DNS service and to configure port forwarding for each camera and, optionally, action button; I recommend to start testing the video stream in LAN to check the compatibility before digging into remote connections; learn more <a href="https://cdf1982.com/glancecam/faqs#remote">here</a>.<br><br><br>
                    </p>
                </div>    
             </div>
