--- a/_includes/glancecam3.html
+++ b/_includes/glancecam3.html
@@ -8,11 +8,11 @@
                 <div class="about-content">
                     <p>
 						<b>GlanceCam 3 is the app's biggest update yet</b> and the list of what is new and improved in the regular version is quite extensive. A few highlights:<br><br>
-						• A <b>new Preferences window</b> makes easier adding, reordering and configuring video streams and tweaks; additional help is also provided in a new onboarding video, plus throughout the app in detailed tooltips and in the extensive <a href="{{ site.baseurl }}/faqs">Frequently Asked Questions</a>.<br><br>
+						• A <b>new Preferences window</b> makes easier adding, reordering and configuring video streams and tweaks; additional help is also provided in a new onboarding video, plus throughout the app in detailed tooltips and in the extensive <a href="https://cdf1982.com/glancecam/faqs">Frequently Asked Questions</a>.<br><br>
 						• The <b>aspect ratio of the video stream is now auto-detected</b>.<br><br>
 						• <b>Insta-zoom and resizing is faster</b> and works great on ultra-wide displays.<br><br>
 						• It's now possible to send a camera to the same level of macOS background, behind all apps and icons, so that it remains always available in the most unobtrusive way possible. A bit hacky and nerdy, but often asked for!<br><br>
-						• Lots of <b><a href="{{ site.baseurl }}/faqs#shortcuts">new keyboard shortcuts</a></b> have been added.<br><br>
+						• Lots of <b><a href="https://cdf1982.com/glancecam/faqs#shortcuts">new keyboard shortcuts</a></b> have been added.<br><br>
 						• Improved auto-generated email reports when requesting support or providing feedback.<br><br>
 						• GlanceCam 3 rocks a <b>new, stunning app icon</b> designed by <a href="https://beckyhansmeyer.com">Becky Hansmeyer</a>.<br><br><br>
                     </p>
