--- a/_includes/use-cases-and-features.html
+++ b/_includes/use-cases-and-features.html
@@ -10,7 +10,7 @@
 						• Install <b>cameras from different manufacturers</b> and <b>avoid their cumbersome web interfaces, plugins or proprietary apps</b>.<br><br>
 						• Mount webcams in your living room, kitchen and garden to check on your cat when you're away, maybe turning on a light at night or taking a snapshot when kitty does something funny.<br><br>
 						• Point a camera at your front gate and let visitors in by activating a network relay.<br><br>
-						<b>GlanceCam is a bit nerdy</b>, but very useful if you want to take full advantage of cheap webcams.<br>It can stream cameras on your LAN or via Internet and, while <b>it's not the most "works out-of-the-box" app to configure (<a href="{{ site.baseurl }}/faqs#setup">you'll need some knowledge about your network and cameras</a>: IP address, username, password and the string format required to stream your specific camera model)</b>, it's very flexible and brand-agnostic; please, check the requirements section, and don't hesitate to <a href="mailto:support@cdf1982.com">ask me a question</a> before purchasing.<br><br>
+						<b>GlanceCam is a bit nerdy</b>, but very useful if you want to take full advantage of cheap webcams.<br>It can stream cameras on your LAN or via Internet and, while <b>it's not the most "works out-of-the-box" app to configure (<a href="https://cdf1982.com/glancecam/faqs#setup">you'll need some knowledge about your network and cameras</a>: IP address, username, password and the string format required to stream your specific camera model)</b>, it's very flexible and brand-agnostic; please, check the requirements section, and don't hesitate to <a href="mailto:support@cdf1982.com">ask me a question</a> before purchasing.<br><br>
 						<b>Please be advised that GlanceCam is designed for realtime playback and DOES NOT support DVRs / NVRs, proprietary cloud services, recording (nor playback of recordings), motion detection and pan & tilt (PTZ) control</b>.<br><br><br>
 					</p>
                 </div>
@@ -27,9 +27,9 @@
 						• With most IP webcams, you can <b>receive the video stream via RTSP, HTTP or RTMP</b>, without opening a browser; GlanceCam shows you those feeds in a <b>resizable window you can keep always visible on your Desktop</b>.<br><br>
 						• You can add <b>as many cameras as you like</b>.<br><br>
 						• The app shows one camera at a time in a single window, and you can switch between cameras inside that window; upgrading to GlanceCam Pro will allow to open as many windows as you need.<br><br>
-						• For every camera, you can also configure up to 2 optional buttons, visible when you hover your mouse on the app window, to <a href="{{ site.baseurl }}/faqs#actions">perform actions via customizable HTTP GET request URLs.</a><br><br>
+						• For every camera, you can also configure up to 2 optional buttons, visible when you hover your mouse on the app window, to <a href="https://cdf1982.com/glancecam/faqs#actions">perform actions via customizable HTTP GET request URLs.</a><br><br>
 						• GlanceCam's window can be configured to be <b>'Always on top' and visible in every Space</b>, or even 'Behind everything', at the level of your Desktop; the app can <b>optionally auto-launch at login</b>.<br><br>
-						• GlanceCam offers many <b><a href="{{ site.baseurl }}/faqs#shortcuts">keyboard shortcuts</a></b> and is great for automation: it has a <a href="{{ site.baseurl }}/faqs#automation">URL scheme and supports Apple Script</a> for switching cameras and toggling full-screen mode; you can even control it from your MacBook's TouchBar.
+						• GlanceCam offers many <b><a href="https://cdf1982.com/glancecam/faqs#shortcuts">keyboard shortcuts</a></b> and is great for automation: it has a <a href="https://cdf1982.com/glancecam/faqs#automation">URL scheme and supports Apple Script</a> for switching cameras and toggling full-screen mode; you can even control it from your MacBook's TouchBar.
 					</p>
                 </div>
             </div>
