Fixed URL for logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
                     <div class="logo">
-                        <a href="https://cdf1982.com"><img src="https://cdf1982.com/glancecam/assets/img/logo/logo.png" class="img-fluid" alt=""></a><b> GlanceCam</b>
+                        <a href="https://glancecam.app"><img src="https://glancecam.app/assets/img/logo/logo.png" class="img-fluid" alt=""></a><b> GlanceCam</b>
                     </div>
                 </div>
 				<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-right">
