--- a/_includes/requirements-links-contacts.html
+++ b/_includes/requirements-links-contacts.html
@@ -28,7 +28,7 @@
  					<b><a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896">Download GlanceCam on the Mac App Store</a></b><br><br>
  					<a href="https://cdf1982.com/glancecam/faqs">Frequently Asked Questions</a><br>
  					<a href="https://cdf1982.com/glancecam/glancecam-release-notes">Release Notes</a><br>
- 					<a href="https://cdf1982.com/tag/glancecam">GlanceCam Blog on cdf1982.com</a><br><br>
+ 					<a href="https://cdf1982.com/tag/glancecam">GlanceCam Blog</a><br><br>
  					<a href="https://cdf1982.com/glancecam-mediakit">Member of the Press 😍? Here's the Media Kit</a><br><br><br><br>
                     </p>
                 </div>
@@ -38,7 +38,7 @@
                 </div>
 				<div class="about-content">
 					<p>
-					You can contact me, Cesare, via email at <a href="mailto:support@cdf1982.com">support@cdf1982.com</a> or on Twitter <a href="https://twitter.com/cdf1982">@cdf1982.com</a>. And of course Milla has her own <a href="https://www.instagram.com/millakillapilla/">Instagram page</a>.<br><br>It's only me here doing all the coding and support, so please <b>allow a couple of business days for a reply to come</b>, but know that <b>I read and respond to all emails and that I'd love to hear from you!</b>
+					You can contact me, Cesare, via email at <a href="mailto:support@cdf1982.com">support@cdf1982.com</a> or on Twitter <a href="https://twitter.com/cdf1982">@cdf1982.com</a>. And of course Milla has her own <a href="https://www.instagram.com/millakillapilla/">Instagram page</a>.<br><br>You can also check my other macOS and iOS apps, and my blog, at [cdf1982.com](https://cdf1982.com).<br><br>If you write me, please consider that it's only me here doing all the coding and support, so it would be very nice if you could <b>allow a couple of business days for a reply to come</b>; rest assured that <b>I read and respond to all emails and that I'd genuinely love to hear from you!</b>
 					</p>
            	 	</div>
             </div>
