Fixed wrong link format
I’m tired…

--- a/_includes/requirements-links-contacts.html
+++ b/_includes/requirements-links-contacts.html
@@ -38,7 +38,7 @@
                 </div>
 				<div class="about-content">
 					<p>
-					You can contact me, Cesare, via email at <a href="mailto:support@cdf1982.com">support@cdf1982.com</a> or on Twitter <a href="https://twitter.com/cdf1982">@cdf1982.com</a>. And of course Milla has her own <a href="https://www.instagram.com/millakillapilla/">Instagram page</a>.<br><br>You can also check my other macOS and iOS apps, and my blog, at [cdf1982.com](https://cdf1982.com).<br><br>If you write me, please consider that it's only me here doing all the coding and support, so it would be very nice if you could <b>allow a couple of business days for a reply to come</b>; rest assured that <b>I read and respond to all emails and that I'd genuinely love to hear from you!</b>
+					You can contact me, Cesare, via email at <a href="mailto:support@cdf1982.com">support@cdf1982.com</a> or on Twitter <a href="https://twitter.com/cdf1982">@cdf1982.com</a>. And of course Milla has her own <a href="https://www.instagram.com/millakillapilla/">Instagram page</a>.<br><br>You can also check my other macOS and iOS apps, and my blog, at <a href="https://cdf1982.com">cdf1982.com</a>.<br><br>If you write me, please consider that it's only me here doing all the coding and support, so it would be very nice if you could <b>allow a couple of business days for a reply to come</b>; rest assured that <b>I read and respond to all emails and that I'd genuinely love to hear from you!</b>
 					</p>
            	 	</div>
             </div>
