Added references to iMore and Macitynet

--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -22,9 +22,21 @@
                     </div>
                     <div class="single-item testimonial-items text-center">
                         <div class="client-text">
+							“GlanceCam puts all of your IP cameras into their own window on your Mac.”
+                        </div>
+                        <span><a href="https://www.imore.com/glancecam-puts-all-your-ip-cameras-their-own-window-your-mac">iMore review</a></span>
+                    </div>
+                    <div class="single-item testimonial-items text-center">
+                        <div class="client-text">
                             “Finally, a cam viewer that works!”
                         </div>
                         <span>⭐️⭐️⭐️⭐️⭐️ App Store review</span>
+                    </div>
+                    <div class="single-item testimonial-items text-center">
+                        <div class="client-text">
+                            “GlanceCam 3, the Mac viewer of IP cameras is updated with many new features,”
+                        </div>
+                        <span><a href="https://www.macitynet.it/glancecam-3-il-visualizzatore-mac-di-telecamere-ip-si-aggiorna-con-tante-novita/">Macitynet review</a></span>
                     </div>
                     <div class="single-item testimonial-items text-center">
                         <div class="client-text">
