--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="single-item testimonial-items text-center">
                         <div class="client-text">
-                            “GlanceCam 3, the Mac viewer of IP cameras is updated with many new features,”
+                            “GlanceCam 3, the Mac viewer of IP cameras is updated with many new features.”
                         </div>
                         <span><a href="https://www.macitynet.it/glancecam-3-il-visualizzatore-mac-di-telecamere-ip-si-aggiorna-con-tante-novita/">Macitynet review</a></span>
                     </div>
