Added 1 review, updated countdown

--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -40,6 +40,13 @@
                     </div>
                     <div class="single-item testimonial-items text-center">
                         <div class="client-text">
+                            “Just launch the app and see the camera. There are enough features without being complicated and the ones I don't care about stay out of the way. I'm supprised how little resources it's using for four cams. I got the pro version and I'm very happy with the multiple windows and minimalistic appearance mode.”
+                        </div>
+                        <span>⭐️⭐️⭐️⭐️⭐️ App Store review</span>
+                    </div>
+					
+                    <div class="single-item testimonial-items text-center">
+                        <div class="client-text">
                             “Brilliant! Grabs the RTSP stream from my Armcrest cam, so no more stupid web interface.”
                         </div>
                         <span>⭐️⭐️⭐️⭐️⭐️ App Store review</span>
