--- a/_includes/requirements-links-contacts.html
+++ b/_includes/requirements-links-contacts.html
@@ -8,8 +8,8 @@
                </div>
                <div class="about-content">
                    <p>
-					• A Mac running Big Sur or a previous version of macOS (High Sierra or newer).<br><br>
-					• One or more IP cameras capable of broadcasting their stream via RTSP, HTTP(s) or RTMP; you'll need to know the camera IP address, your personal credentials (username and password) and the string format required by the manufacturer (including the string protocol and port). There's (<a href="https://cdf1982.com/glancecam/faqs#setup">extensive documentation about the setup process</a>, and you can always <a href="https://cdf1982.com/glancecam/faqs#support">count on my help</a> if you need assistance.<br><br>
+					• An Apple silicon on Intel Mac running Ventura or a previous version of macOS or OS X (High Sierra 10.12.2 or newer).<br><br>
+					• One or more IP cameras capable of broadcasting their stream via RTSP, HTTP(s) or RTMP (RTSPs not supported); you'll need to know the camera IP address, your personal credentials (username and password) and the string format required by the manufacturer (including the string protocol and port). There's (<a href="https://cdf1982.com/glancecam/faqs#setup">extensive documentation about the setup process</a>, and you can always <a href="https://cdf1982.com/glancecam/faqs#support">count on my help</a> if you need assistance.<br><br>
 					• Any Mac running the supported operating systems should have plenty of power to stream IP cameras with GlanceCam, but multiple streams, high resolutions or lots of cameras open at the same time will require faster computers.<br><br>
 					• A solid connection between your computer and the cameras, be it LAN or WiFi, is recommended both for performances and stability, especially if you want many cameras to stream at the same time.<br><br>
 					• For triggering actions by pressing the <a href="https://cdf1982.com/glancecam/faqs#actions">customizable buttons</a>, you'll need devices or appliances that can react to HTTP GET requests.<br><br>
@@ -26,9 +26,9 @@
                 <div class="about-content">
                     <p>
  					<b><a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896">Download GlanceCam on the Mac App Store</a></b><br><br>
- 					<a href="https://cdf1982.com/glancecam/faqs">Frequently Asked Questions</a><br>
- 					<a href="https://cdf1982.com/glancecam/glancecam-release-notes">Release Notes</a><br>
- 					<a href="https://cdf1982.com/tag/glancecam">GlanceCam Blog</a><br><br>
+ 					<a href="https://cdf1982.com/glancecam/faqs">Frequently Asked Questions</a><br><br>
+ 					<a href="https://cdf1982.com/glancecam/glancecam-release-notes">Release Notes</a><br><br>
+ 					<a href="https://cdf1982.com/tag/glancecam">GlanceCam Blog</a><br><br><br>
  					<a href="https://cdf1982.com/glancecam-mediakit">Member of the Press 😍? Here's the Media Kit</a><br><br><br><br>
                     </p>
                 </div>
