Added one review to testimonials

--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -15,8 +15,14 @@
                 <div class="testimonial-active owl-carousel">
                     <div class="single-item testimonial-items text-center">
                         <div class="client-text">
-							“I have used/bought most of the IP clients for Mac out there
-							and this is totally the best one.”
+                            “I have used/bought most of the IP clients for Mac out there
+                            and this is totally the best one.”
+                        </div>
+                        <span>⭐️⭐️⭐️⭐️⭐️ App Store review</span>
+                    </div>
+                    <div class="single-item testimonial-items text-center">
+                        <div class="client-text">
+							“Apple Silicon update is WOW. What an improvment in launch speed and camera changing. WOWOWOWOWO”
                         </div>
                         <span>⭐️⭐️⭐️⭐️⭐️ App Store review</span>
                     </div>
