Added Cycle mode to GlanceCam Pro features

--- a/_includes/glancecam3.html
+++ b/_includes/glancecam3.html
@@ -27,6 +27,7 @@
                     <p>
 						<b>GlanceCam Pro is a new tier introduced in version 3 and is designed for Users with advanced requirements</b>, who have inspired and asked for its features.<br><br>It is offered either as a life-time in-app purchase at $ 22.99 or as a yearly subscription at $ 8.99; both purchasing methods are available because some Users prefer one option over the other, but they all unlock the same feature set:<br><br>
 						• <b>Multi-windows support</b>, which allows to open, resize and arrange as many windows as needed, remembering their configuration between sessions.<br><br>
+                        • <b><a href="https://cdf1982.com/glancecam/faqs#cyclemode">Cycle mode</a></b>, a convenient way to cycle through some (or all) your cameras in one window.<br><br>
 						• An optional <b>Minimalistic user interface</b> that removes everything but the video stream when the app is not actively interacted with.<br><br>
 						• The ability to <b>force a custom aspect-ratio</b>, for non standard streams such as horizontally compressed ones or vertical cameras.<br><br>
 						• A <b>preferential channel for email support</b>, guaranteed to GlanceCam Pro Users in less than 24 hours, Monday through Friday.<br><br>
