Replaced the mention of Big Sur with generic macOS for screenshots titles

--- a/_includes/portfolios_2.html
+++ b/_includes/portfolios_2.html
@@ -15,7 +15,7 @@
                 <div class="portfolio-menu mb-55">
                     <button class="active" data-filter="*">all</button>
                     <button class="portfolio-item" data-filter=".cat-one">App Store</button>
-                    <button class="portfolio-item" data-filter=".cat-two">GlanceCam on Big Sur</button>
+                    <button class="portfolio-item" data-filter=".cat-two">GlanceCam on macOS</button>
                     <button class="portfolio-item" data-filter=".cat-three">Icons</button>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_01.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
-                        <h5><a href="#">GlanceCam on Big Sur</a></h5>
+                        <h5><a href="#">GlanceCam on macOS</a></h5>
                         <span>Screenshot 1/7</span>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_02.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
-                        <h5><a href="#">GlanceCam on Big Sur</a></h5>
+                        <h5><a href="#">GlanceCam on macOS</a></h5>
                         <span>Screenshot 2/7</span>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_03.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
-                        <h5><a href="#">GlanceCam on Big Sur</a></h5>
+                        <h5><a href="#">GlanceCam on macOS</a></h5>
                         <span>Screenshot 3/7</span>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_04.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
-                        <h5><a href="#">GlanceCam on Big Sur</a></h5>
+                        <h5><a href="#">GlanceCam on macOS</a></h5>
                         <span>Screenshot 4/7</span>
                     </div>
                 </div>
@@ -197,7 +197,7 @@
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_05.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
-                        <h5><a href="#">GlanceCam on Big Sur</a></h5>
+                        <h5><a href="#">GlanceCam on macOS</a></h5>
                         <span>Screenshot 5/7</span>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_06.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
-                        <h5><a href="#">GlanceCam on Big Sur</a></h5>
+                        <h5><a href="#">GlanceCam on macOS</a></h5>
                         <span>Screenshot 6/7</span>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_07.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
-                        <h5><a href="#">GlanceCam on Big Sur</a></h5>
+                        <h5><a href="#">GlanceCam on macOS</a></h5>
                         <span>Screenshot 7/7</span>
                     </div>
                 </div>
