Description updates for GlanceCam 3.8

--- a/_includes/glancecam3.html
+++ b/_includes/glancecam3.html
@@ -12,7 +12,7 @@
 						• The <b>aspect ratio of the video stream is now auto-detected</b>.<br><br>
 						• <b>Insta-zoom and resizing is faster</b> and works great on ultra-wide displays.<br><br>
 						• It's now possible to send a camera to the same level of macOS background, behind all apps and icons, so that it remains always available in the most unobtrusive way possible. A bit hacky and nerdy, but often asked for!<br><br>
-                        • <b><a href="https://cdf1982.com/glancecam/glancecam-release-notes#3_3">Out of my Way</a></b>, a <i>magic trick</i> for moving a window temporarily to grab something below it.<br><br>
+                        • With <b><a href="https://cdf1982.com/glancecam/glancecam-release-notes#3_3">Out of my way</a></b>, the <i>magic trick</i> for moving a window temporarily to grab something below it and <b><a href="https://cdf1982.com/glancecam/glancecam-release-notes#3_8">Stay out of my way</a></b>, you can achieve productivity bliss.<br><br>
 						• Lots of <b><a href="https://cdf1982.com/glancecam/faqs#shortcuts">new keyboard shortcuts</a></b> have been added.<br><br>
 						• Improved auto-generated email reports when requesting support or providing feedback.<br><br>
 						• GlanceCam 3 rocks a <b>new, stunning app icon</b> designed by <a href="https://beckyhansmeyer.com">Becky Hansmeyer</a>.<br><br><br>
