--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
 				<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-right">
                     <div class="logo">
                         <a href="https://itunes.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896?l=it&ls=1&mt=12"><img src="{{site.baseurl}}/assets/img/download_mac_app_store_black_bg.svg" class="img-fluid" alt="Download on the Mac App Store"></a>
+                        <link rel="me" href="https://iosdev.space/@cdf1982" />
                     </div>
             </div>
             <div class="offcanvas-overly"></div>
