GlanceCam 4 website update

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,8 +24,8 @@
                     <div class="single-cta">
                         <i class="icofont-twitter"></i>
                         <div class="cta-text">
-                            <h4>Twitter</h4>
-							<a href="https://twitter.com/cdf1982"><span>@cdf1982</span></a>
+                            <h4>Mastodon</h4>
+							<a href="https://iosdev.space/@cdf1982"><span>@cdf1982@iosdev.space</span></a>
                         </div>
                     </div>
                 </div>
