--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -5,8 +5,8 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="slider-content">
-                            <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 3<br>View all your<span> IP cameras</span></h1>
-                            <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to the beloved IP camera viewer for Mac just arrived with lots of new and advanced features!</p>
+                            <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 4<br>View all your<span> IP cameras</span></h1>
+                            <p data-animation="fadeInLeft" data-delay=".4s">A major update to the beloved IP camera viewer for Mac just arrived with lots of new and advanced features!</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
                             <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">&nbsp;Download&nbsp;</a>&nbsp;&nbsp;
@@ -23,8 +23,8 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="slider-content">
-							<h1 data-animation="fadeInUp" data-delay=".2s">GLANCECAM PRO<br>with <span>multi-windows</span></h1>
-							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 50, so much nicer!</p>
+							<h1 data-animation="fadeInUp" data-delay=".2s">GLANCECAM PRO<br>with <span>multi-windows & GlanceGrids</span></h1>
+							                            <p data-animation="fadeInLeft" data-delay=".4s">Multiple windows and flexible grids that adapt their layout dynamically make the experience of streaming one, or 50, IP cameras so much nicer!</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
                             <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">&nbsp;Download&nbsp;</a>&nbsp;&nbsp;
@@ -42,7 +42,7 @@
                     <div class="col-xl-12">
                         <div class="slider-content">
 							<h1 data-animation="fadeInUp" data-delay=".2s">"Finally, a cam<br>viewer that <span>works!"</span></h1>
-							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam is compatible with most IP cameras, because it works with standard protocols such as RTSP, HTTP(s) and RTMP</p>
+							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam is the native Mac client compatible with most IP cameras, because it works with standard protocols such as RTSP, HTTP(s) and RTMP</p>
 								<div class="col-xl-12 text-center">
 								<div class="call-to-action white-text">
                             <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">&nbsp;Download&nbsp;</a>&nbsp;&nbsp;
