--- a/_includes/portfolios_2.html
+++ b/_includes/portfolios_2.html
@@ -1,4 +1,3 @@
-<a name="screenshots"></a>
 <section class="portfolio-area yellow-bg pt-100 pb-70">
     <div class="container">
         <div class="row">
@@ -6,6 +5,7 @@
                 <div class="col-xl-12 text-center pb-40 ">
                     <div class="section-title service-title">
                         <h2>Screenshots</h2>
+                        <p><ul>All images are also available in <a href="https://cdf1982.com/glancecam-mediakit/glancecam4-media-kit.zip">this zip file</a></ul></p>
                     </div>
                 </div>
             </div>
@@ -24,8 +24,8 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_01.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_01.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_01_MAS.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_01_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">Mac App Store</a></h5>
@@ -36,8 +36,8 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_02.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_02.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_02_MAS.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_02_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">Mac App Store</a></h5>
@@ -48,8 +48,8 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_03.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_03.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_03_MAS.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_03_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">Mac App Store</a></h5>
@@ -60,8 +60,8 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_04.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_04.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_04_MAS.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_04_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">Mac App Store</a></h5>
@@ -72,8 +72,8 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam//GlanceCam3_AppStore_05.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_05.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam//GlanceCam4_05_MAS.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_05_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">Mac App Store</a></h5>
@@ -85,8 +85,8 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_06.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_06.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_06_MAS.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_06_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">Mac App Store</a></h5>
@@ -97,8 +97,8 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_07.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_07.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07_MAS.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">Mac App Store</a></h5>
@@ -109,8 +109,8 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_08.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_08.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_08_MAS.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_08_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">Mac App Store</a></h5>
@@ -121,8 +121,8 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_09.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_09.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_09_MAS.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_09_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">Mac App Store</a></h5>
@@ -133,8 +133,8 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_10.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_AppStore_10.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07_MAS.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">Mac App Store</a></h5>
@@ -145,84 +145,96 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_01.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_01.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_01.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_01.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">GlanceCam on macOS</a></h5>
-                        <span>Screenshot 1/7</span>
+                        <span>Screenshot 1/8</span>
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_02.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_02.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_02.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_02.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">GlanceCam on macOS</a></h5>
-                        <span>Screenshot 2/7</span>
+                        <span>Screenshot 2/8</span>
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_03.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_03.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_03.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_03.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">GlanceCam on macOS</a></h5>
-                        <span>Screenshot 3/7</span>
+                        <span>Screenshot 3/8</span>
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_04.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_04.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_04.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_04.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">GlanceCam on macOS</a></h5>
-                        <span>Screenshot 4/7</span>
+                        <span>Screenshot 4/8/span>
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_05.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_05.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_05.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_05.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">GlanceCam on macOS</a></h5>
-                        <span>Screenshot 5/7</span>
+                        <span>Screenshot 5/8</span>
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_06.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_06.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_06.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_06.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">GlanceCam on macOS</a></h5>
-                        <span>Screenshot 6/7</span>
+                        <span>Screenshot 6/8</span>
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_07.jpg" class="img-fluid" alt="">
-                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam3_on_BigSur_07.jpg" class="view"><i class="icofont-plus"></i></a>
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">GlanceCam on macOS</a></h5>
-                        <span>Screenshot 7/7</span>
+                        <span>Screenshot 7/8</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
+                <div class="portfolio-wrapper">
+                    <div class="portfolio-thumb portfolio-popup">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_08.jpg" class="img-fluid" alt="">
+                        <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_08.jpg" class="view"><i class="icofont-plus"></i></a>
+                    </div>
+                    <div class="portfolio-content">
+                        <h5><a href="#">GlanceCam on macOS</a></h5>
+                        <span>Screenshot 8/8</span>
                     </div>
                 </div>
             </div>
@@ -233,7 +245,7 @@
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCamIcons.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
-                        <h5><a href="#">GlanceCam 3 icons</a></h5>
+                        <h5><a href="#">GlanceCam 4 icons</a></h5>
                         <span>Icon 1/14</span>
                     </div>
                 </div>
