--- a/_includes/use-cases-and-features.html
+++ b/_includes/use-cases-and-features.html
@@ -26,7 +26,7 @@
 						<b>Here's a list of <i>some</i> of the things GlanceCam can do:</b><br><br>
 						• With most IP webcams, you can <b>receive the video stream via RTSP, HTTP or RTMP</b>, without opening a browser; GlanceCam shows you those feeds in a <b>resizable window you can keep always visible on your Desktop</b>.<br><br>
 						• You can add <b>as many cameras as you like</b>.<br><br>
-						• The app shows one camera at a time in a single window, and you can switch between cameras inside that window; upgrading to GlanceCam Pro will allow to open as many windows as you need.<br><br>
+						• The app shows one camera at a time in a single window, and you can switch between cameras inside that window; upgrading to GlanceCam Pro will allow to open as many windows as you need and to take advantage of the new GlanceGrids, flexible grids with presets.<br><br>
 						• For every camera, you can also configure up to 2 optional buttons, visible when you hover your mouse on the app window, to <a href="https://cdf1982.com/glancecam/faqs#actions">perform actions via customizable HTTP GET request URLs.</a><br><br>
 						• GlanceCam's window can be configured to be <b>'Always on top' and visible in every Space</b>, or even 'Behind everything', at the level of your Desktop; the app can <b>optionally auto-launch at login</b>.<br><br>
 						• GlanceCam offers many <b><a href="https://cdf1982.com/glancecam/faqs#shortcuts">keyboard shortcuts</a></b> and is great for automation: it has a <a href="https://cdf1982.com/glancecam/faqs#automation">URL scheme and supports Apple Script</a> for switching cameras and toggling full-screen mode; you can even control it from your MacBook's TouchBar.
