--- a/_includes/use-cases-and-features.html
+++ b/_includes/use-cases-and-features.html
@@ -8,7 +8,7 @@
                 <div class="about-content">
 					<p><b>Keep an eye on one or more IP cameras</b>:<br><br>
 						• Install <b>cameras from different manufacturers</b> and <b>avoid their cumbersome web interfaces, plugins or proprietary apps</b>.<br><br>
-                        • Keep <b>your cameras live-streaming throughout the day on your Desktop</b> at any size you want and <b>Insta-zoom whenever you want to take a closer look</b>.<br><br>
+                        • Keep <b>your cameras live-streaming throughout the day on your Desktop</b> at any size you want and <b>Insta-zoom</b> <i>(hold down your right mouse button to temporarily maximise a camera)</i> <b>whenever you want to take a closer look</b>.<br><br>
 						• Mount webcams in your living room, kitchen and garden to check on your cat when you're away, maybe turning on a light at night or taking a snapshot when kitty does something funny.<br><br>
 						• Point a camera at your front gate and let visitors in by activating a network relay.<br><br>
 						<b>GlanceCam is a bit nerdy</b>, but very useful if you want to take full advantage of cheap webcams.<br>It can stream cameras on your LAN or via Internet and, while <b>it's not the most "works out-of-the-box" app to configure (<a href="https://cdf1982.com/glancecam/faqs#setup">you'll need some knowledge about your network and cameras</a>: IP address, username, password and the string format required to stream your specific camera model)</b>, it's very flexible and brand-agnostic; please, check the requirements section, and don't hesitate to <a href="mailto:support@cdf1982.com">ask me a question</a> before purchasing.<br><br>
@@ -31,6 +31,7 @@
 						• For every camera, you can also configure up to 2 optional buttons, visible when you hover your mouse on the app window, to <a href="https://cdf1982.com/glancecam/faqs#actions">perform actions via customizable HTTP GET request URLs.</a><br><br>
 						• GlanceCam's window can be configured to be <b>'Always on top' and visible in every Space</b>, or even 'Behind everything', at the level of your Desktop; the app can <b>optionally auto-launch at login</b>.<br><br>
 						• GlanceCam offers many <b><a href="https://cdf1982.com/glancecam/faqs#shortcuts">keyboard shortcuts</a></b> and is great for automation: it has a <a href="https://cdf1982.com/glancecam/faqs#automation">URL scheme and supports Apple Script</a> for switching cameras and toggling full-screen mode; you can even control it from your MacBook's TouchBar.
+                        • And there's so much more you can do: in over 30 free updates, GlanceCam has gained so many super-powers, it's hard to list them all... but discovering every feature at your own pace is very easy within the app, with <b>tooltips for every interface element</b> explaining how things work and what is possible.
 					</p>
                 </div>
             </div>
