--- a/_includes/requirements-links-contacts.html
+++ b/_includes/requirements-links-contacts.html
@@ -38,7 +38,7 @@
                 </div>
 				<div class="about-content">
 					<p>
-					You can contact me, Cesare, via email at <a href="mailto:support@cdf1982.com">support@cdf1982.com</a> or on Twitter <a href="https://twitter.com/cdf1982">@cdf1982.com</a>. And of course Milla has her own <a href="https://www.instagram.com/millakillapilla/">Instagram page</a>.<br><br>You can also check my other macOS and iOS apps, and my blog, at <a href="https://cdf1982.com">cdf1982.com</a>.<br><br>Please know that I read and respond to all emails as quickly as I can and I'd genuinely love to hear from you!</b>
+					You can contact me, Cesare, via email at <a href="mailto:support@cdf1982.com">support@cdf1982.com</a> or on Mastodon <a href="https://iosdev.space/@cdf1982">@cdf1982@iosdev.space</a>.<br>And of course Milla has her own <a href="https://www.instagram.com/millakillapilla/">Instagram page</a> where you'll be able to see how cute and smart she is.<br><br>You can also check my other macOS and iOS apps, and my blog, at <a href="https://cdf1982.com">cdf1982.com</a>.<br><br>Please know that I read and respond to all emails (as quickly as I can, it's just me here doing coding and support) and I'd genuinely love to hear from you!</b>
 					</p>
            	 	</div>
             </div>
