--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="slider-content">
-							<h1 data-animation="fadeInUp" data-delay=".2s">GLANCECAM PRO<br>with <span>multi-windows </span><& <span>GlanceGrids</span></span></h1>
+							<h1 data-animation="fadeInUp" data-delay=".2s">GLANCECAM PRO<br>with <span>multi-windows </span>& <span>GlanceGrids</span></span></h1>
 							                            <p data-animation="fadeInLeft" data-delay=".4s">Multiple windows and flexible grids that adapt their layout dynamically make the experience of streaming one, or 50, IP cameras so much nicer!</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
