Website updates for 4.1.x release (it'sSonoma time)

--- a/_includes/requirements-links-contacts.html
+++ b/_includes/requirements-links-contacts.html
@@ -8,7 +8,7 @@
                </div>
                <div class="about-content">
                    <p>
-					• An Apple silicon / Intel Mac running Ventura or a previous version of macOS (10.14 Mojave or newer).<br><br>
+					• An Apple silicon / Intel Mac running Sonoma or a previous version of macOS (10.14 Mojave or newer).<br><br>
 					• One or more IP cameras capable of broadcasting their stream via RTSP, HTTP(s) or RTMP (RTSPs not supported); you'll need to know the camera IP address, your personal credentials (username and password) and the string format required by the manufacturer (including the string protocol and port). There's (<a href="https://cdf1982.com/glancecam/faqs#setup">extensive documentation about the setup process</a>, and you can always <a href="https://cdf1982.com/glancecam/faqs#support">count on my help</a> if you need assistance.<br><br>
 					• Any Mac running the supported operating systems should have plenty of power to stream IP cameras with GlanceCam, but multiple streams, high resolutions or lots of cameras open at the same time will require faster computers.<br><br>
 					• A solid connection between your computer and the cameras, be it LAN or WiFi, is recommended both for performances and stability, especially if you want many cameras to stream at the same time.<br><br>
