Copy accounts for future non-Mac versions

--- a/_includes/glancecam4.html
+++ b/_includes/glancecam4.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="about-content">
                     <p>
-						<b>GlanceCam 4 is a major release</b> and the list of features, new and improved, is <i>very</i> extensive. A few highlights:<br><br>
+						<b>GlanceCam 4 for Mac is a major release</b> and the list of features, new and improved, is <i>very</i> extensive. A few highlights:<br><br>
                         • Introducing <b>GlanceGrids</b>: presets of multiple cameras displayed in a single window with a flexible layout that automatically adjusts from a grid <i>(2x2, 3x3, etc.)</i> to a single row <i>(i.e. 8x1)</i> or column <i>(1x8)</i> based on the window's resizing; GlanceGrids are part of GlanceCam Pro and can work side by side with single-camera windows and USB-attached cameras.<br><br>
                         • With the new and unique <b>Roll Up</b> feature, view a video stream only when your mouse pointer enters the window area and, as soon as you move your mouse away, have that camera "roll up" leaving only the title bar visible.<br><br>
                         • The <b>aspect ratio of the video stream is auto-detected</b> and the <b>ability to recover from network connections being disrupted</b> has increased significantly and is more customisable. And GlanceCam Pro Users with even the strangest and less standard-compliant cameras can find the right layout thanks to the new aspect ratio adjustments, <i>Freeform</i> and <i>Delayed</i>.<br><br>
@@ -26,7 +26,7 @@
                 </div>
                 <div class="about-content">
                     <p>
-                        <b>GlanceCam Pro is an optional upgrade and is designed for Users with advanced requirements</b>, who have inspired and asked for its features.<br><br>It is offered <b>either as a yearly subscription</b> at $ 8.99 <b>or as a life-time in-app purchase</b> at $ 22.99; both purchasing methods are available since some Users strongly prefer one option over the other, but they all unlock the same feature set:<br><br>
+                        <b>GlanceCam Pro is an optional upgrade and is designed for macOS Users with advanced requirements</b>, who have inspired and asked for its features.<br><br>It is offered <b>either as a yearly subscription</b> at $ 8.99 <b>or as a life-time in-app purchase</b> at $ 22.99; both purchasing methods are available since some Users strongly prefer one option over the other, but they all unlock the same feature set:<br><br>
 						• <b>Multi-windows</b> support, which allows to open, resize and arrange as many windows as needed, remembering their layout between sessions. Independent windows are a convenient way to glance at different cameras throughout your day, by arranging them around your Desktop (and multiple displays) with different sizes... and with beloved GlanceCam features like <i>Insta-zoom</i> and <i>Out of my Way</i>, zooming-in to get a better look at a camera, or accessing another app or file below one of GlanceCam windows, is blazing fast!<br><br>
                         • <b>GlanceGrids</b>, the new grid system with presets that dinamically adapts the layout upon window resizing. New in GlanceCam 4, flexible grids are a companion or an alternative – your choice – to having multiple independent windows for your cameras are a great and highly customisable solution to never miss anything happening in your streams.<br><br>
                         • An optional <b>Minimalistic user interface</b> that removes everything but the video stream.<br><br>
@@ -38,6 +38,7 @@
                     </p>
                 </div>
             </div>
+            GlanceCam for Mac and the GlanceCam Pro upgrade are macOS-exclusive: future versions of the app developed from the ground up for different platforms (iOS, iPadOS, etc.) will require separate purchases / subscriptions that are not included with the Mac version.	
         </div>
     </div>
 </section>
