Tweak for last commit

--- a/_includes/glancecam4.html
+++ b/_includes/glancecam4.html
@@ -38,7 +38,11 @@
                     </p>
                 </div>
             </div>
-            GlanceCam for Mac and the GlanceCam Pro upgrade are macOS-exclusive: future versions of the app developed from the ground up for different platforms (iOS, iPadOS, etc.) will require separate purchases / subscriptions that are not included with the Mac version.	
+            <div class="about-content">
+                <p>
+                    GlanceCam for Mac and the GlanceCam Pro upgrade are <i>native and exclusive for macOS</i>: future versions of the app developed from the ground up for different platforms (iOS, iPadOS, etc.) will require separate purchases / subscriptions that are not included with the Mac version.	
+                </p>
+            </div>
         </div>
     </div>
 </section>
