Header with SEO improvements (alt and title for images)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,12 +4,12 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
                     <div class="logo">
-                        <a href="https://glancecam.app"><img src="https://glancecam.app/assets/img/logo/logo.png" class="img-fluid" alt=""></a><b> GlanceCam</b>
+                        <a href="https://glancecam.app"><img src="https://glancecam.app/assets/img/logo/logo.png" class="img-fluid" alt="GlanceCam - IP Camera Viewer for Mac" title="GlanceCam - IP Camera Viewer for Mac"></a><b> GlanceCam</b>
                     </div>
                 </div>
 				<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-right">
                     <div class="logo">
-                        <a href="https://itunes.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896?l=it&ls=1&mt=12"><img src="{{site.baseurl}}/assets/img/download_mac_app_store_black_bg.svg" class="img-fluid" alt="Download on the Mac App Store"></a>
+                        <a href="https://itunes.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896?l=it&ls=1&mt=12"><img src="{{site.baseurl}}/assets/img/download_mac_app_store_black_bg.svg" class="img-fluid" alt="Download GlanceCam on the Mac App Store" title="Download GlanceCam on the Mac App Store"></a>
                         <link rel="me" href="https://iosdev.space/@cdf1982" />
                     </div>
             </div>
